# AIMAXXING

./: .gitattributes  .gitignore  Cargo.toml  README.md  ROADMAP.md  aimaxxing.yaml  aimaxxing_setup.iss  build_all.ps1  build_all.sh  build_windows_setup.ps1  install.ps1  install.sh  replace_names.py
auth/: Cargo.toml
auth/src/: lib.rs  manager.rs  store.rs  types.rs  vault.rs
builtin-tools/: Cargo.toml
builtin-tools/src/: lib.rs
builtin-tools/src/compiler/: github.rs  parser.rs
builtin-tools/src/tool/: browser.rs  chart.rs  cipher.rs  code_interpreter.rs  cron.rs  data_transform.rs  delegation.rs  filesystem.rs  forge.rs  git_ops.rs  handover.rs  image.rs  mailer.rs  memory.rs  mod.rs  notifier.rs  refine.rs  text_extract.rs  voice.rs  web_fetch.rs  web_search.rs
connectors/: Cargo.toml
connectors/src/: dingtalk.rs  discord.rs  email.rs  feishu.rs  im.rs  lib.rs  slack.rs  telegram.rs
core/: Cargo.toml  build.rs  compiler.yml.template
core/examples/: aagt_audit.rs  deep_refactoring_demo.rs  engram_memory_usage.rs  file_store_usage.rs  full_load_benchmark.rs  gateway_demo.rs  mock_node.rs  openai_demo.rs  refactored_demo.rs  repro_filestore_bug.rs  repro_risk_bug.rs  resource_benchmark.rs  risk_management.rs  skill_loader_prototype.rs  strategy_pipeline.rs  swarm_demo.rs  test_dynamic_skills.rs  verify_audit_fixes.rs  verify_circuit_breaker.rs  verify_memory_isolation.rs  verify_resilience.rs  verify_risk_safety.rs  verify_sidecar.rs
core/src/: lib.rs  prelude.rs  security.rs
core/src/agent/: attempt.rs  cache.rs  context.rs  core.rs  history.rs  kv_cache.rs  memory.rs  message.rs  multi_agent.rs  provider.rs  scheduler.rs
core/src/agent/evolution/: auto_reflection.rs  consolidation.rs  memory_decay.rs  observation.rs  rollback.rs
core/src/agent/identity/: mod.rs  vessel_pack.rs
core/src/agent/provider/: openai_compat.rs  resilient.rs
core/src/agent/swarm/: manager.rs  manifest.rs  mod.rs
core/src/approval/: policy.rs
core/src/auth/: manager.rs  mod.rs  store.rs
core/src/bus/: message_bus.rs
core/src/config/: mod.rs
core/src/connectors/: dingtalk.rs  discord.rs  feishu.rs  im.rs  mod.rs  telegram.rs
core/src/env/: mod.rs
core/src/hooks/: engine.rs
core/src/infra/: logging.rs  mod.rs  notifications.rs  observable.rs  prefix_cache.rs  telegram.rs
core/src/infra/gateway/: mod.rs  openai.rs  protocol.rs  state.rs
core/src/knowledge/: intent.rs  mod.rs  rag.rs  router.rs
core/src/mcp/: bridge.rs  mod.rs  transport.rs
core/src/runtime/: mod.rs  traits.rs
core/src/security/: injection.rs  leaks.rs  mod.rs  output_auditor.rs  shell_firewall.rs  skill_verifier.rs  tests.rs  vessel.rs
core/src/session/: session.rs  store.rs
core/src/skills/: mod.rs  sandbox.rs
core/src/skills/compiler/: github.rs  mod.rs  parser.rs
core/src/skills/runtime/: micropython.rs  mod.rs  node.rs  python_utils.rs  quickjs.rs  wasm.rs
core/src/skills/tool/: browser.rs  chart.rs  cipher.rs  code_interpreter.rs  cron.rs  data_transform.rs  delegation.rs  filesystem.rs  forge.rs  git_ops.rs  handover.rs  image.rs  mailer.rs  (+8 more)
core/src/store/: engram_reranker.rs
core/tests/: concurrency.rs  cron_test.rs  delegation.rs  engram_integration.rs  event_lifecycle_test.rs  event_lifecycle_v2_test.rs  external_skill_test.rs  image_test.rs  integration_context_attempt.rs  integration_tests.rs  knowledge_skills.rs  metrics_test.rs  minimal_agent_test.rs  personality.rs  quantization.rs  retry_test.rs  runtime_tests.rs  scheduler.rs  test_agent_swarm.rs  test_forge.rs  test_swarm.rs  tiered_rag_tests.rs  time_travel.rs  trivial_test.rs  verify_audit_fixes.rs  verify_fixes.rs  verify_memory_fixes.rs  verify_memory_limits.rs  verify_risk_fix.rs  verify_tool_policy.rs  verify_wasm.rs  voice_test.rs
engram/: Cargo.toml
engram/src/: agent_memory.rs  chunker.rs  embedder.rs  error.rs  fts.rs  hybrid_search.rs  indexer.rs  intent.rs  kv.rs  lib.rs  local_reranker.rs  model_pool.rs  quant.rs  reranker.rs  retriever.rs  rrf.rs  simd_kernels.rs  storage.rs  store.rs  tool.rs  vector_store.rs  virtual_path.rs  wasm_ocr.rs  watcher.rs
engram/src/storage/: mod.rs  redb_impl.rs
engram/src/stt/: audio.rs  mod.rs  whisper.rs
engram/src/tts/: mod.rs  piper.rs
gateway/: Cargo.toml  HEARTBEAT.md
gateway/skills/browser-test/: SKILL.md
gateway/skills/hello-gateway/: SKILL.md
gateway/skills/model-test/: SKILL.md
gateway/soul/: IDENTITY.md
gateway/src/: doctor.rs  lib.rs  main.rs  mcp.rs  onboard.rs
gateway/src/api/: bridge.rs  factory.rs  knowledge.rs  mod.rs  security.rs  server.rs  tool.rs
gateway/src/blueprints/: mod.rs
infra/: Cargo.toml
infra/src/: lib.rs  logging.rs  maintenance.rs  observable.rs  pricing.rs  telegram.rs
infra/src/gateway/: dashboard.html  handlers.rs  mod.rs  openai.rs  protocol.rs  state.rs
knowledge/: Cargo.toml
knowledge/src/: intent.rs  kg.rs  lib.rs  rag.rs  router.rs  virtual_path.rs
knowledge/src/store/: file.rs
mcp/: Cargo.toml
mcp/src/: bridge.rs  client.rs  lib.rs  manager.rs  server.rs  types.rs
panel/: Cargo.toml  index.html
panel/data/: aimaxxing.yaml  cron.redb
panel/examples/: resize_test.rs
panel/src/: api.rs  app.rs  app_state.rs  i18n.rs  main.rs
panel/src/locales/: en.json  zh.json
providers/: Cargo.toml
providers/examples/: basic_agent.rs  custom_tools.rs  groq_trading.rs  markdown_memory.rs  mock_demo.rs  moltbook_agent.rs  moonshot_chat.rs  ollama_private.rs  production_tracing.rs  provider_benchmark.rs  repro_oom.rs  semantic_browser.rs  test_all_providers.rs  tracing_agent.rs
providers/src/: anthropic.rs  deepseek.rs  gemini.rs  generic_http.rs  groq.rs  lib.rs  llama_cpp.rs  minimax.rs  mock.rs  moonshot.rs  ollama.rs  openai.rs  openrouter.rs  provider_tests.rs  retry.rs  utils.rs
providers/tests/: moltbook_logic_test.rs  moltbook_mock_test.rs
runtimes/: Cargo.toml
runtimes/src/: lib.rs  micropython.rs  node.rs  python_utils.rs  quickjs.rs  wasm.rs
security/: Cargo.toml
security/src/: bypass_tests.rs  leaks.rs  lib.rs  sandbox.rs  shell_firewall.rs  tests.rs  vessel.rs
(+86 files in other folders)
