[workspace]
resolver = "2"
members = [
    "brain",
    "providers", 
    "engram",
    "gateway", 
    "panel",
    "connectors",
    "security",
    "runtimes",
    "builtin-tools",
    "auth",
    "knowledge",
    "mcp",
    "infra"
]

[workspace.package]
version = "0.3.5"
edition = "2021"
license = "MIT"
repository = "https://github.com/undead-undead/AIMAXXING"
keywords = ["ai", "agent", "trading", "llm", "framework"]
categories = ["science", "simulation", "asynchronous"]

[workspace.dependencies]
# Internal crates
brain = { path = "brain", version = "0.3.5" }
providers = { path = "providers", version = "0.3.5" }
engram = { path = "engram", version = "0.3.5" }
connectors = { path = "connectors", version = "0.3.5" }
security = { path = "security", version = "0.3.5" }
runtimes = { path = "runtimes", version = "0.3.5" }
builtin-tools = { path = "builtin-tools", version = "0.3.5" }
auth = { path = "auth", version = "0.3.5" }
knowledge = { path = "knowledge", version = "0.3.5" }
mcp = { path = "mcp", version = "0.3.5" }
infra = { path = "infra", version = "0.3.5" }


# Async runtime
tokio = { version = "1.43", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# Serialization  
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"

# HTTP
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }
bytes = "1.9"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# Utilities
uuid = { version = "1.12", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6.1"
parking_lot = "0.12"
schemars = "0.8"
rayon = "1.10"
simd-json = "0.14"

# Proc macro
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "parsing"] }
regex = "1.12"
aho-corasick = "1.1"
once_cell = "1.21"

# Serialization
bincode = "1.3"
serde_yaml_ng = "0.10"
rust_decimal = { version = "1.36", features = ["serde-float"] }
rust_decimal_macros = "1.36"
tokio-cron-scheduler = "0.13"

# gRPC
tonic = "0.12"
prost = "0.13"
tonic-build = "0.12"

# Database & Crypto
redb = "2.1"
aes-gcm = "0.10"
rand = "0.8"
argon2 = "0.5"

[workspace.lints.rust]
unsafe_code = "warn"

[workspace.lints.clippy]
unwrap_used = "warn"
expect_used = "warn"
# [Build Config]

