[package]
name = "auth"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
brain = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
openidconnect = "4.0.1"
oauth2 = { version = "5.0.0", features = ["reqwest"] }
reqwest = { workspace = true }
keyring = "3.6.3"

[dev-dependencies]
tempfile = "3.10"

[lints]
workspace = true
