[package]
name = "builtin-tools"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
brain = { workspace = true }
security = { workspace = true }
runtimes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
dashmap = { workspace = true }
serde_yaml_ng = { workspace = true }
reqwest = { workspace = true, optional = true }
tokio = { workspace = true, features = ["full"] }
schemars = "0.8"
zip = "2.2"
chrono = { workspace = true }
parking_lot = { workspace = true }
rand = "0.9"
base64 = "0.22"
headless_chrome = { version = "1.0", optional = true }
uuid = { workspace = true }
futures = { workspace = true }
which = "8.0"
hex = "0.4"
urlencoding = "2.1"

[features]
default = ["http", "cron", "vector-db"]
http = ["dep:reqwest", "brain/http"]
browser = ["dep:headless_chrome"]
cron = ["brain/cron"]
vector-db = ["brain/vector-db"]

[lints]
workspace = true
