[package]
name = "brain"
description = "Core types and traits for the AIMAXXING AI Agent framework"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "../README.md"

[dependencies]
futures = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow.workspace = true
thiserror = { workspace = true }
bytes = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
schemars = { workspace = true }
tokio-util = { version = "0.7" }
tracing-wasm = { version = "0.2.1", optional = true }

# Optional dependencies gated by features
reqwest = { workspace = true, optional = true, default-features = false }
tokio-cron-scheduler = { workspace = true, optional = true }
zip = { version = "0.6.6", optional = true }
base64 = { version = "0.21", optional = true }
argon2 = { version = "0.5", optional = true }
# rusqlite = { workspace = true, optional = true }
redb = { version = "2.4", optional = true }
regex = "1.12.3"
aho-corasick = "1.1"
once_cell = "1.21.3"
hex = "0.4.3"
rand = "0.10.0"
urlencoding = "2.1.3"
fxhash = "0.2"
hmac = "0.12.1"
sha2 = "0.10.8"
magic-wormhole = { version = "0.7.6", features = ["transfer"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true, features = ["full"] }
libc = "0.2"
which = "8.0.0"
keyring = "3.6.3"
fs2 = "0.4.3"
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
rayon = { workspace = true }
simd-json = { workspace = true }
serde_yaml_ng = { workspace = true }
console-subscriber = "0.5.0"
tiktoken-rs = "0.9.1"
dirs = "6.0.0"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
    "Win32_Security"
] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { workspace = true, features = ["sync"] } # Minimal tokio for wasm
getrandom = { version = "0.2", features = ["js"] } # Needed for uuid/etc in browser
uuid = { workspace = true, features = ["js"] }

[features]
default = ["telegram", "http", "wasm", "vector-db"]
telegram = []
http = ["dep:reqwest", "dep:zip", "dep:base64"]
wasm = ["dep:zip"]
p2p = [ "dep:argon2", "dep:base64"]
vector-db = []
cron = ["dep:tokio-cron-scheduler", "dep:redb"]
swarm-p2p = ["p2p"]

[dev-dependencies]
tempfile = "3.24.0"
tokio-test = "0.4"
clap = { version = "4.4", features = ["derive"] }

[build-dependencies]
tonic-build = { workspace = true }
