[package]
name = "engram"
version.workspace = true
edition.workspace = true
authors = ["AIMAXXING Team"]
description = "Engram — High-performance memory engine for AIMAXXING with Engram-KV storage, SIMD-accelerated vector search, and pure Rust BM25"
license = "MIT OR Apache-2.0"
exclude = ["*.db"]

[dependencies]
# Core async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
brain = { workspace = true }

# Engram-KV storage engine (pure Rust, mmap, ACID)
redb = "2.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Hashing (content-addressable storage)
sha2 = "0.10"
hex = "0.4"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.6", features = ["v4", "serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"
parking_lot = "0.12"

# Logging
tracing = "0.1"

# Glob patterns
glob = "0.3"

# File watching for Active Indexing
notify = "6.1"

# CJK segmentation support
jieba-rs = "0.6"
once_cell = "1.18"

# HNSW vector index
hnsw_rs = { version = "0.3", optional = true }

# Candle ML framework for embeddings
candle-core = { version = "0.8", optional = true }
candle-nn = { version = "0.8", optional = true }
candle-transformers = { version = "0.8", optional = true }
tokenizers = { version = "0.21", optional = true }

# SIMD acceleration
simsimd = "6.2"

# Futures
futures.workspace = true

[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"
tracing-subscriber = "0.3"

[features]
default = ["fts", "vector"]
fts = []
vector = ["hnsw_rs", "candle-core", "candle-nn", "candle-transformers", "tokenizers"]
simd = []
full = ["fts", "vector", "simd"]
tokenizers = ["dep:tokenizers"]
