[package]
name = "mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
brain = { workspace = true }
tokio = { workspace = true, features = ["full"] }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true }
url = "2.5"
dashmap = { workspace = true }
regex = { workspace = true }
builtin-tools = { path = "../builtin-tools" }

[lints]
workspace = true
