[package]
name = "aimaxxing-panel"
version = "0.3.5"
edition = "2021"
license = "MIT"
description = "AIMAXXING native egui control panel — lightweight, instant-start desktop dashboard"

[[bin]]
name = "panel"
path = "src/main.rs"

[dependencies]
egui = "0.31"
egui_extras = { version = "0.31", features = ["all_loaders"] }
egui_plot = "0.31"
eframe = { version = "0.31", default-features = false }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
anyhow = { version = "1.0" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
poll-promise = { version = "0.3", features = ["tokio"] }
eframe = { version = "0.31", default-features = false, features = ["glow", "persistence", "default_fonts", "x11", "wayland"] }
tokio = { version = "1.43", features = ["full"] }
tray-icon = "0.20"
dirs = "6.0"

[target.'cfg(target_os = "windows")'.dependencies]
single-instance = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
poll-promise = { version = "0.3", features = ["wasm-bindgen-futures"] }
eframe = { version = "0.31", default-features = false, features = ["glow", "persistence", "default_fonts"] }
tokio = { version = "1.43", features = ["sync", "macros", "io-util", "rt", "time"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["BinaryType", "Blob", "ErrorEvent", "FileReader", "MessageEvent", "ProgressEvent", "WebSocket"] }
console_error_panic_hook = "0.1"
tracing-wasm = "0.2"

[features]
default = []
clipboard-image = []


